--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "infiltrade",
-  "description": "infiltrade",
+  "name": "app",
+  "description": "app",
   "version": "0.0.1",
-  "homepage": "https://github.com/wearefractal/infiltrade",
+  "homepage": "https://github.com/wearefractal/app",
   "author": {},
   "repository": {
     "type": "git",
-    "url": "git://github.com/wearefractal/infiltrade.git"
+    "url": "git://github.com/wearefractal/app.git"
   },
   "bugs": {
-    "url": "https://github.com/wearefractal/infiltrade/issues"
+    "url": "https://github.com/wearefractal/app/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/wearefractal/infiltrade/blob/master/LICENSE-MIT"
+      "url": "https://github.com/wearefractal/app/blob/master/LICENSE-MIT"
     }
   ],
 
